# smartssd

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run_demo.sh
client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compression-client
client/src/: client.cpp  client.cpp~
dataset/: test.txt.lz4
host/: CMakeLists.txt  Makefile  cmake_install.cmake
kernel/: CMakeLists.txt  Makefile  cmake_install.cmake  compression.xclbin.info  compression.xclbin.link_summary  xf_compress.xo.compile_summary  xf_packer.xo  xf_packer.xo.compile_summary  xf_uncompress.xo  xf_uncompress.xo.compile_summary  xf_unpacker.xo  xf_unpacker.xo.compile_summary
kernel/src/: lz4_p2p_decompress_kernel.cpp
